// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnFlow snapshots should render ColumnFlow 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withMargin SectionColumn--withMargin--light"
    data-test-section=""
  >
    <div
      class="css-lxhfcz SectionColumn__labels SectionColumn__labels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Flow
      </small>
    </div>
    <div
      class="css-1r00qlg"
      data-test-box=""
    >
      <div
        class="css-1m2m6pt SectionColumn__content SectionColumn__content--light SectionColumn__content--single SectionColumn__content--single--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-19um8c2 ToggleButtonGroup ToggleButtonGroup--light ToggleButtonGroup--fullWidth ToggleButtonGroup--fullWidth--light"
          data-test-box=""
          data-test-toggle-button-group="flow"
        >
          <button
            class="ToggleButton ToggleButton--light ToggleButton--selected ToggleButton--selected--light"
            data-test-toggle-button="0"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flow-default"
              height="12"
              name="FlowDefault"
              width="12"
            />
          </button>
          <button
            class="ToggleButton ToggleButton--light"
            data-test-toggle-button="1"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flow-vertical"
              height="12"
              name="FlowVertical"
              width="12"
            />
          </button>
          <button
            class="ToggleButton ToggleButton--light"
            data-test-toggle-button="2"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flow-horizontal"
              height="12"
              name="FlowHorizontal"
              width="12"
            />
          </button>
          <button
            class="ToggleButton ToggleButton--light"
            data-test-toggle-button="3"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flow-grid"
              height="12"
              name="FlowGrid"
              width="12"
            />
          </button>
        </div>
      </div>
      <div
        class="css-c1qms7"
        data-test-box=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnFlow snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withMargin SectionColumn--withMargin--light"
    data-test-section=""
  >
    <div
      class="css-lxhfcz SectionColumn__labels SectionColumn__labels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumn__label SectionColumn__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Flow
      </small>
    </div>
    <div
      class="css-1r00qlg"
      data-test-box=""
    >
      <div
        class="css-1m2m6pt SectionColumn__content SectionColumn__content--light SectionColumn__content--single SectionColumn__content--single--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-19um8c2 ToggleButtonGroup ToggleButtonGroup--light ToggleButtonGroup--fullWidth ToggleButtonGroup--fullWidth--light"
          data-test-box=""
          data-test-toggle-button-group="flow"
        >
          <button
            class="ToggleButton ToggleButton--light"
            data-test-toggle-button="0"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flow-default"
              height="12"
              name="FlowDefault"
              width="12"
            />
          </button>
          <button
            class="ToggleButton ToggleButton--light"
            data-test-toggle-button="1"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flow-vertical"
              height="12"
              name="FlowVertical"
              width="12"
            />
          </button>
          <button
            class="ToggleButton ToggleButton--light"
            data-test-toggle-button="2"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flow-horizontal"
              height="12"
              name="FlowHorizontal"
              width="12"
            />
          </button>
          <button
            class="ToggleButton ToggleButton--light"
            data-test-toggle-button="3"
            type="button"
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flow-grid"
              height="12"
              name="FlowGrid"
              width="12"
            />
          </button>
        </div>
      </div>
      <div
        class="css-c1qms7"
        data-test-box=""
      />
    </div>
  </div>
</DocumentFragment>
`;
